corrected the path

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 #API_KEY = "AIzaSyBT7QrVzm1SF3bD9xzZQ77jG5LdqsNBvXo"
 API_KEY = "AIzaSyBPiB1YR9-oZ-PA3d2hxueGJYoQT19P4BA"
 #API_KEY = "AIzaSyABiZeC91TuBFvvXr3G3tQLUlTHqX8Es8o"
-DB_PATH = "data\mydatabase.db"
+DB_PATH = "data/mydatabase.db"
